# antigravity

./: .gitignore  GEMINI.md  README.md  implementation_plan.md  pyproject.toml  task.md  walkthrough.md
rules/analysis/: genesis_gap_analysis.md  genesis_risk_mechanics.md  ide_professional_use_cases.md  ide_skill_integration_plan.md  invisible_bombs.md  logic_assessment_genesis_v2.md  multi_agent_recursion_solution.md  responsibility_boundary_matrix.md  scenario_deep_recursion.md  simulation_mega_recursion.md  simulation_strict_recursion.md
rules/archive/: Agentic_Dev_Playbook_2026_V1.md
rules/history/: audit_jan_2026.md  decision_log_2026.md  red_team_ledger.md
rules/tools/: enforcement_scripts.md
src/ag_dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ag_dev/cli/: decision_router.py  ghost_buster.py  main.py  pre_commit_scan.py  skill_loader.py  system_packager.py
src/ag_dev/resources/rules/: Agentic_Dev_Playbook_2026.md  Global_GEMINI.md  decision_tree.md
src/ag_dev/resources/skills/: skill_decision_architecture.md  skill_decision_safety.md  skill_decision_verification.md  skill_defensive_io.md  skill_log_standard.md  skill_meta_skill_generator.md  skill_playwright_simulation.md  (+1 more)
src/antigravity.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: simulation_fire_drill_report.md  simulation_hell_level_comparison.md  simulation_hell_report.md  simulation_protocol_fire_drill.md  test_decision_tree.py
workflows/: clean-up.md  code-review.md  git-smart-commit.md  project-health.md  safe-refactor.md  verify-assumption.md
